--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,10 @@
 *.orig
 .codio
+out
 
 # Logs
 logs
 *.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-
-# Coverage directory used by tools like istanbul
-coverage
 
 # Dependency directories
 node_modules
