--- a/.settings
+++ b/.settings
@@ -1,11 +1,13 @@
 [editor]
-; enter your editor preferences here...
+visible_tabs = true
+theme = monokai
+show_trailing_space = true
 
 [ide]
 ; enter your ide preferences here...
 
 [code-beautifier]
-; enter your code-beautifier preferences here...
+max_preserve_newlines = 1
 
 [codio-annotation]
 ; enter your codio-annotation preferences here...
