--- a/.jshintrc
+++ b/.jshintrc
@@ -1,8 +1,6 @@
 {
     "globals": {
-        "moment": true,
-        "Deki": true,
-        "_": true
+        "Vex": true
     },
     "camelcase": true,
     "curly": true,
