--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "gulp": "~3.6.2",
     "gulp-uglify": "~0.2.1",
     "gulp-jshint": "~1.5.5",
-    "gulp-jscs": "~0.4.2",
-    "gulp-browserify": "~0.5.0"
+    "gulp-jscs": "~0.4.2"
   }
 }
