--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.3.0"
+    "polymer": "Polymer/polymer#~0.3.0",
+    "vexflow": "*"
   }
 }
