--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,11 @@
     "tests"
   ],
   "dependencies": {
+    "vexflow": "*",
     "polymer": "Polymer/polymer#~0.3.0",
-    "vexflow": "*"
+    "polymer-ui-collapsible": "Polymer/polymer-ui-collapsible#~0.3.0",
+    "polymer-ajax": "Polymer/polymer-ajax#~0.3.0",
+    "polymer-localstorage": "Polymer/polymer-localstorage#~0.3.0",
+    "polymer-signals": "Polymer/polymer-signals#~0.3.0"
   }
 }
