--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "homepage": "https://github.com/aaronmars/scottish-writer",
   "devDependencies": {
     "bower": "~1.3",
+    "browser-sync": "^1.1.1",
     "gulp": "~3.7",
-    "gulp-uglify": "~0.2.1",
+    "gulp-jscs": "~0.4.2",
     "gulp-jshint": "~1.5.5",
-    "gulp-jscs": "~0.4.2"
+    "gulp-uglify": "~0.2.1"
   }
 }
