--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,9 @@
   ],
   "dependencies": {
     "vexflow": "*",
-    "polymer": "Polymer/polymer#~0.3.0",
-    "polymer-ui-collapsible": "Polymer/polymer-ui-collapsible#~0.3.0",
-    "polymer-ajax": "Polymer/polymer-ajax#~0.3.0",
-    "polymer-signals": "Polymer/polymer-signals#~0.3.0"
+    "polymer": "Polymer/polymer#*",
+    "polymer-ui-collapsible": "Polymer/polymer-ui-collapsible#*",
+    "polymer-ajax": "Polymer/polymer-ajax#*",
+    "polymer-signals": "Polymer/polymer-signals#*"
   }
 }
