Work on tuplets and scaling

--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "vexflow": "*",
     "polymer": "Polymer/polymer#*",
     "polymer-ui-collapsible": "Polymer/polymer-ui-collapsible#*",
-    "core-ajax": "Polymer/core-ajax#*"
+    "core-ajax": "Polymer/core-ajax#*",
+    "raphael": "*"
   }
 }
